@@ -57,6 +57,9 @@ GNU coreutils NEWS                                    -*- outline -*-
   causing name look-up errors.  Also look-ups are first done outside the chroot,
   in case the look-up within the chroot fails due to library conflicts etc.
 
+  shred now supports multiple passes on GNU/Linux tape devices by rewinding
+  the tape before each pass.  Also redundant writes to empty files are avoided.
+
   split avoids unnecessary input buffering, immediately writing input to output
   which is significant with --filter or when writing to fifos or stdout etc.
 
